# ance

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md  ance.sln  bolt.md  pointers_and_references.odg
src/: CMakeLists.txt  CoreDefinitions.cpp  CoreDefinitions.h  ance.cpp  ance.interp  ance.vcxproj  ance.vcxproj.filters  anceConstants.h  anceLexer.interp  main.cpp  main.cxx
src/ance/: AccessModifier.cpp  AccessModifier.h  ApplicationVisitor.cpp  ApplicationVisitor.h  Assigner.cpp  Assigner.h  BinaryOperator.cpp  BinaryOperator.h  CMakeLists.txt  Element.cpp  Element.h  Indexer.h  InternalStorage.cpp  InternalStorage.h
src/ance/analyze/: Analyzer.cpp  Analyzer.h  CMakeLists.txt
src/ance/assignable/: Assignable.cpp  Assignable.h  CMakeLists.txt  Discard.cpp  Discard.h  IndexerSet.cpp  IndexerSet.h  VariableAssignable.cpp  VariableAssignable.h
src/ance/ast/: CMakeLists.txt  Node.cpp  Node.h  Parser.cpp  Parser.h  Parsing.cpp  Parsing.h  Printer.cpp  Printer.h  ast.ixx
src/ance/bbt/: CMakeLists.txt  FlowBuilder.cpp  FlowBuilder.h  Function.cpp  Function.h  Grapher.cpp  Grapher.h  IntrinsicSignature.cpp  IntrinsicSignature.h  Node.cpp  Node.h  Printer.cpp  Printer.h  Segmenter.cpp  Segmenter.h  Signature.cpp  Signature.h  Type.cpp  Type.h  Value.cpp  Value.h
src/ance/cet/: Address.cpp  Address.h  CMakeLists.txt  Grapher.cpp  Grapher.h  IntrinsicsRunner.cpp  IntrinsicsRunner.h  Memory.h  Node.cpp  Node.h  Printer.cpp  Printer.h  Provider.cpp  Provider.h  Runner.cpp  Runner.h  Scope.cpp  Scope.h  Temporary.cpp  Temporary.h  ValueExtensions.cpp  ValueExtensions.h  Variable.cpp  Variable.h
src/ance/construct/: BooleanConstant.cpp  BooleanConstant.h  ByteConstant.cpp  ByteConstant.h  CMakeLists.txt  Constant.cpp  Constant.h  CustomFunction.cpp  CustomFunction.h  DefinedFunction.cpp  DefinedFunction.h  DelayedValue.cpp  DelayedValue.h  ExpressionBackedConstant.cpp  ExpressionBackedConstant.h  ExpressionBackedValue.cpp  ExpressionBackedValue.h  ExpressionValue.cpp  ExpressionValue.h  ExternFunction.cpp  ExternFunction.h  FloatConstant.cpp  FloatConstant.h  Function.cpp  Function.h  FunctionDefinition.cpp  FunctionDefinition.h  FunctionGroup.cpp  FunctionGroup.h  GlobalVariable.cpp  GlobalVariable.h  IntegerConstant.cpp  IntegerConstant.h  LocalVariable.cpp  LocalVariable.h  Parameter.cpp  Parameter.h  RoughlyCastedValue.cpp  RoughlyCastedValue.h  Signature.cpp  (+17 more)
src/ance/core/: AccessModifier.cpp  AccessModifier.h  Assigner.cpp  Assigner.h  CMakeLists.txt  Constants.h  Context.cpp  Context.h  Entity.cpp  Entity.h  Function.cpp  Function.h  Grapher.cpp  Grapher.h  Identifier.cpp  Identifier.h  Intrinsic.cpp  Intrinsic.h  LiteralType.cpp  LiteralType.h  Location.cpp  Location.h  Printer.cpp  Printer.h  Reporter.cpp  Reporter.h  Scope.cpp  Scope.h  Signature.cpp  Signature.h  StringStorage.cpp  StringStorage.h  Type.cpp  Type.h  UnaryOperator.cpp  UnaryOperator.h  Value.cpp  Value.h  Variable.cpp  Variable.h
src/ance/est/: CMakeLists.txt  Expander.cpp  Expander.h  Node.cpp  Node.h  Printer.cpp  Printer.h
src/ance/expression/: Addressof.cpp  Addressof.h  Allocation.cpp  Allocation.h  AllocationExpression.cpp  AllocationExpression.h  AssignableExpression.cpp  AssignableExpression.h  BackingConstantExpression.cpp  BackingConstantExpression.h  BackingExpression.cpp  BackingExpression.h  BinaryOperation.cpp  BinaryOperation.h  BindRef.cpp  BindRef.h  BuildableConstantExpression.cpp  BuildableConstantExpression.h  BuildableExpression.cpp  BuildableExpression.h  CMakeLists.txt  ConstantExpression.cpp  ConstantExpression.h  ConstantLiteral.cpp  ConstantLiteral.h  ConstantLiteralExpression.cpp  ConstantLiteralExpression.h  DefaultValue.cpp  DefaultValue.h  DefaultValueExpression.cpp  DefaultValueExpression.h  DelayableExpression.cpp  DelayableExpression.h  Expression.cpp  Expression.h  FunctionCall.cpp  FunctionCall.h  (+37 more)
src/compiler/: AnceCompiler.cpp  AnceCompiler.h  AnceLinker.cpp  AnceLinker.h  AnceReader.cpp  AnceReader.h  Application.cpp  Application.h  ApplicationType.cpp  ApplicationType.h  Builder.cpp  Builder.h  CMakeLists.txt  CodePrinter.cpp  CodePrinter.h  CompileContext.cpp  CompileContext.h  CompileState.cpp  CompileState.h  ControlFlowGraphPrinter.cpp  ControlFlowGraphPrinter.h  Execution.cpp  Execution.h  FileContext.cpp  FileContext.h  NativeBuild.cpp  NativeBuild.h  NativeBuilder.cpp  NativeBuilder.h  OptLevel.cpp  OptLevel.h  Packages.cpp  Packages.h  Project.cpp  Project.h  ProjectDescription.cpp  ProjectDescription.h  RoughlyCastedValue.cpp  RoughlyCastedValue.h  Runtime.cpp  (+21 more)
src/grammar/: CMakeLists.txt  ance.g4  ance.interp  ance.tokens  anceBaseVisitor.cpp  anceBaseVisitor.h  anceLexer.cpp  anceLexer.h  anceLexer.interp  anceLexer.tokens  anceParser.cpp  anceParser.h  anceVisitor.cpp  anceVisitor.h
src/lang/: AccessModifier.cpp  AccessModifier.h  Accessibility.cpp  ApplicationVisitor.h  Assigner.cpp  Assigner.h  BinaryOperator.cpp  BinaryOperator.h  CMakeLists.txt  Constructs.h  Context.cpp  Context.h  Element.h  Located.cpp  UnaryOperator.cpp  UnaryOperator.h  Visitor.h
src/management/: CMakeLists.txt  DataVisitor.cpp  DataVisitor.h  File.cpp  File.h  content_exception.cpp  content_exception.h
src/validation/: ANSI.h  AnceSyntaxErrorHandler.cpp  AnceSyntaxErrorHandler.h  AnceSyntaxErrorListener.cpp  AnceSyntaxErrorListener.h  CMakeLists.txt  SourceFile.cpp  SourceFile.h  Strings.cpp  Strings.h  Utilities.cpp  Utilities.h  ValidationLogger.cpp  ValidationLogger.h
src_old/compiler/: AnceCompiler.h  AnceLinker.h  Builder.cpp  CMakeLists.txt  CodePrinter.cpp  ControlFlowGraphPrinter.cpp  ControlFlowGraphPrinter.h  Execution.cpp  Execution.h  FileContext.cpp  FileContext.h  OptLevel.cpp  Project.cpp  Runtime.h  SourceTree.cpp  TargetDescriptor.cpp  Unit.cpp  Unit.h
src_old/lang/: AccessModifier.cpp  AccessModifier.h  Accessibility.h  ApplicationVisitor.h  Assigner.cpp  Assigner.h  BinaryOperator.h  CMP.cpp  CMP.h  CMakeLists.txt  Constructs.h  Context.cpp  Located.h  UnaryOperator.cpp  UnaryOperator.h  Visitor.h
(+987 files in other folders)
