add_subdirectory(constant)
add_subdirectory(value)
add_subdirectory(descriptions)

target_sources(ance PRIVATE
               BasicBlock.cpp
               BasicBlockDefinitionSimple.cpp
               BasicBlockDefinitionFinalizing.cpp
               BasicBlockDefinitionEmpty.cpp
               BasicBlockDefinitionReturning.cpp
               BasicBlockDefinitionBranching.cpp
               BasicBlockDefinitionMatching.cpp
               Function.cpp
               CustomFunction.cpp
               ExternFunction.cpp
               PredefinedFunction.cpp
               StatementFunction.cpp
               InitializerFunction.cpp
               GlobalVariable.cpp
               LocalVariable.cpp
               Parameter.cpp
               Variable.cpp
               VariableDefinition.cpp
               FunctionDefinition.cpp
               FunctionGroup.cpp
               Callable.cpp
               Signature.cpp
               Member.cpp
               CodeBlock.cpp)
